# EventCrafter

./: .coverage  .gitignore  Dockerfile  README.md  config.py  database.py  docker-compose.yml  eventcrafterbot.py  events.db  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: tests.yml
buttons/: create_event_button.py  edit_event_button.py  my_events_button.py
data/: database.py  events.db
database/: db_draft_operations.py  db_operations.py  init_database.py  init_draft_database.py
event/create/: set_date.py  set_description.py  set_limit.py  set_time.py
event/edit/: date.py  description.py  limit.py  time.py
example/: Dockerfile  docker-compose.yml  run_tests.sh
handlers/: button_handlers.py  cancel_handler.py  conversation_handler_states.py  create_event_handler.py  edit_event_handlers.py  mention_handler.py  utils.py
jobs/: notification_jobs.py
message/: send_message.py
src/buttons/: button_handlers.py  buttons.py  create_event_button.py  edit_event_button.py  menu_button_handlers.py  my_events_button.py  my_templates_button.py
src/database/: db_draft_operations.py  db_operations.py  init_database.py  init_draft_database.py  session_manager.py
src/handlers/: button_handlers.py  cancel_handler.py  cancel_utils.py  continue_handler.py  conversation_handler_states.py  create_event_handler.py  draft_handlers.py  draft_utils.py  edit_event_handlers.py  edit_handler.py  edit_handlers.py  handler.py  mention_handler.py  (+9 more)
temp/: date.py  limit.py  set_date.py  set_limit.py  set_time.py
tests/: conftest.py
utils/: utils.py
(+45 files in other folders)
