[tool.poetry]
name = "eventcrafter"
version = "0.9.0"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"  # Убираем предупреждение
testpaths = ["tests/integration", "tests/unit"]
python_files = "test_*.py"
log_cli_level = "INFO"
filterwarnings = [
    "error",  # Превращаем все предупреждения в ошибки
    "ignore::pytest.PytestDeprecationWarning"  # Игнорируем конкретные предупреждения
]

[tool.ruff]
line-length = 120